# claw-eval-zh

./: .gitattributes  DATASET_CARD.md  NOTICE.md  README.md  RELEASE_CHECKLIST.md  SKILL.md  pyproject.toml  skills-lock.json
docs/: claw_eval_zh_migration_plan.md  claw_eval_zh_schema.md  official_claw_eval_export_notes.md  run_with_huggingface.md  taiwan_benchmark_design.md  taiwan_localization_policy.md  task_translation_policy.md  tw_safety_rubric_guidelines.md  tw_validation_report.md  validation_report.md
reports/: grader_changes.md  manual_review_required.json  official_export_candidate_report.json  phase2_initial_audit.md  phase3_initial_audit.md  phase4_initial_audit.md  release_candidate_summary.md  translation_coverage.json  tw_accepted_warnings.json  tw_fixture_manifest.json  tw_gold_check_report.json  tw_gold_check_report.md  tw_grader_changes.md  tw_high_risk_review_matrix.csv  tw_high_risk_review_matrix.md  tw_localization_coverage.json  tw_localization_map.json  tw_manual_review_required.json  validation_tw.json  validation_tw.md  validation_zh.json  validation_zh.md
scripts/: benchmark.py  build_tw_gold_examples.py  build_tw_high_risk_matrix.py  build_tw_localization_map.py  convert_pinchbench_to_claw_eval_zh.py  convert_zh_to_tw_localized.py  export_official_claw_eval_candidate.py  fetch_twse_stock.py  integrate_benchmark_tw.py  integrate_benchmark_tw_manifest.py  integrate_benchmark_tw_validate.py  lib_agent.py  lib_passk.py  lib_zh.py  preflight_env.py  run_hf_benchmark.py  run_tw_gold_checks.py  smoke_tw_runner_load.py  translation_overrides.yaml  validate_claw_eval_zh_tasks.py  validate_tw_localization.py
tasks/: manifest.yaml  task_browser_automation.md  task_calendar.md  task_cicd_pipeline_debug.md  task_clawdhub.md  task_codebase_navigation.md  task_commit_message_writer.md  task_contract_analysis.md  task_csv_cities_density.md  task_csv_cities_filter.md  task_csv_cities_growth.md  task_csv_cities_ranking.md  task_csv_finance_report.md  task_csv_gdp_per_capita.md  task_csv_gdp_ranking.md  task_csv_gdp_regions.md  task_csv_iris_classify.md  task_csv_iris_outliers.md  task_csv_iris_summary.md  task_csv_life_exp_change.md  task_csv_life_exp_outliers.md  task_csv_life_exp_ranking.md  task_csv_pension_liability.md  task_csv_pension_ranking.md  task_csv_pension_risk.md  task_csv_stations_by_elevation.md  task_csv_stations_coverage.md  task_csv_stations_filter.md  task_csv_stock_best_worst.md  task_csv_stock_trend.md  task_csv_stock_volatility.md  task_csv_temp_anomalies.md  task_csv_temp_decades.md  task_csv_temp_trend.md  task_cve_security_triage.md  task_daily_summary.md  task_dockerfile_optimization.md  task_earnings_analysis.md  task_eli5_pdf_summary.md  task_email_reply_drafting.md  (+88 more)
tasks_tw/: manifest.yaml  task_05_dns_rollback_decision.md  task_06_firewall_rule_dry_run.md  task_blog.md  (+182 more)
(+1092 files in other folders)
