[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-eval-zh"
dynamic = ["version"]
description = "claw-eval-zh - Chinese OpenClaw Agent Benchmark (based on PinchBench, task format inspired by Claw-Eval)"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
    "fabric>=3.2.2",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[project.scripts]
# Original PinchBench entry point, preserved for backward compatibility.
benchmark = "benchmark:main"
# claw-eval-zh entry point — same runner, defaults documented in SKILL.md/README.md.
claw-eval-zh = "benchmark:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools_scm]
