[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-eval-zh"
dynamic = ["version"]
description = "claw-eval-zh - Chinese OpenClaw Agent Benchmark (based on PinchBench, task format inspired by Claw-Eval)"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
    "fabric>=3.2.2",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[project.scripts]
# Original PinchBench entry point, preserved for backward compatibility.
benchmark = "benchmark:main"
# claw-eval-zh entry point — same runner, defaults documented in SKILL.md/README.md.
claw-eval-zh = "benchmark:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
# Generated benchmark artifacts are produced deterministically by the converter /
# builders and inherit upstream grader bodies verbatim; they are data outputs, not
# hand-maintained source. Upstream keeps grader code in unlinted .md tasks, so we
# do not lint these generated .py graders either (regeneration stays reproducible).
extend-exclude = [
    "tasks_claw_eval_zh",
    "tasks_claw_eval_tw",
    "exports",
    "gold_tw",
]

[tool.ruff.lint.per-file-ignores]
# Tests prepend sys.path before importing project modules, so module-level imports
# legitimately appear after code (E402).
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools_scm]
